--- a/app/src/main/res/layout/activity_my__attention_.xml
+++ b/app/src/main/res/layout/activity_my__attention_.xml
@@ -38,4 +38,10 @@
             android:layout_below="@id/lay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/crcy"
+        android:layout_below="@id/lay"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 </RelativeLayout>
