--- a/app/src/main/res/layout/frag_cinema_layout_adapter.xml
+++ b/app/src/main/res/layout/frag_cinema_layout_adapter.xml
@@ -23,6 +23,7 @@
                 android:layout_marginTop="10dp"
                 android:textSize="14sp"
                 android:text="哈哈哈哈"
+                android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@id/sim"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -31,6 +32,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_below="@id/name"
                 android:textSize="12sp"
+                android:layout_marginLeft="10dp"
                 android:text="哈哈哈哈"
                 android:maxLines="2"
 
@@ -39,6 +41,7 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/ju"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="12sp"
                 android:layout_alignParentBottom="true"
@@ -52,10 +55,10 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="25dp"
                 android:layout_marginRight="10dp"
-                android:layout_width="24dp"
+                android:layout_width="16dp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="5dp"
-                android:layout_height="24dp" />
+                android:layout_height="16dp" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
