--- a/app/src/main/res/layout/frag_my_layout.xml
+++ b/app/src/main/res/layout/frag_my_layout.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     xmlns:fresco="http://schemas.android.com/apk/res-auto">
 
@@ -60,11 +62,17 @@
         android:layout_marginRight="24dp"
         android:orientation="vertical"
         >
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="5dp"
+            >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="86dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/my_bg_shap"
             >
             <LinearLayout
                 android:id="@+id/my_message"
@@ -92,12 +100,17 @@
                     />
             </LinearLayout>
         </RelativeLayout>
-
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:cardCornerRadius="5dp"
+            >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="86dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/my_bg_shap"
             >
             <LinearLayout
                 android:id="@+id/my_attention"
@@ -154,12 +167,17 @@
                     />
             </LinearLayout>
         </RelativeLayout>
-
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:cardCornerRadius="5dp"
+            >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="86dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/my_bg_shap"
             >
             <LinearLayout
                 android:id="@+id/my_tickling"
@@ -245,7 +263,7 @@
                     />
             </LinearLayout>
         </RelativeLayout>
-
+        </android.support.v7.widget.CardView>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
