--- a/app/src/main/res/layout/userattent_adapter.xml
+++ b/app/src/main/res/layout/userattent_adapter.xml
@@ -2,15 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto">
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="5dp"
+        >
     <RelativeLayout
         android:layout_centerHorizontal="true"
         android:layout_width="312dp"
-        android:layout_height="90dp">
+        android:layout_height="wrap_content">
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/sim"
             android:layout_width="103dp"
             android:layout_margin="10dp"
+
+            fresco:roundedCornerRadius="8dp"
             app:placeholderImage="@drawable/button_shape"
             android:layout_height="128dp" />
         <TextView
@@ -27,7 +37,7 @@
             android:layout_below="@id/name"
             android:textSize="12sp"
             android:text="哈哈哈哈"
-            android:maxLines="3"
+            android:maxLines="5"
 
             android:layout_toRightOf="@id/sim"
             android:layout_width="match_parent"
@@ -35,9 +45,10 @@
         <TextView
             android:id="@+id/ju"
             android:layout_margin="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:textSize="12sp"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/jie"
+            android:layout_marginTop="10dp"
             android:text="哈哈哈哈"
             android:textColor="#999999"
             android:layout_toRightOf="@id/sim"
@@ -45,4 +56,5 @@
             android:layout_height="wrap_content" />
 
     </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
