--- a/app/src/main/res/layout/frag_cinema_layout.xml
+++ b/app/src/main/res/layout/frag_cinema_layout.xml
@@ -65,10 +65,18 @@
             android:layout_width="83dp"
             android:layout_height="25dp" />
     </RelativeLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recy_tui"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_below="@id/re"
         android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recy_tui"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:layout_marginBottom="80dp"
+            ></android.support.v7.widget.RecyclerView>
+    </ScrollView>
+
 </RelativeLayout>
