--- a/app/src/main/res/layout/fragment_filmfragment.xml
+++ b/app/src/main/res/layout/fragment_filmfragment.xml
@@ -10,6 +10,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content">
         <LinearLayout
             android:orientation="vertical"
@@ -178,8 +179,10 @@
                 android:id="@+id/recy3"
                 android:layout_below="@id/remen"
                 android:layout_marginLeft="24dp"
+                android:layout_marginBottom="100dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
     </ScrollView>
