--- a/app/src/main/res/layout/wait_money.xml
+++ b/app/src/main/res/layout/wait_money.xml
@@ -1,71 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingTop="10dp"
-    android:paddingRight="10dp"
-    android:paddingLeft="10dp"
-    android:paddingBottom="20dp"
-    android:background="@drawable/my_message_shape"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <RelativeLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/one_title"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:textColor="#333333"
-            android:text="铁血战士"
-            android:layout_marginBottom="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/one_button"
-            android:textSize="14sp"
-            android:textColor="#ffffff"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/finish_shape"
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:text="去付款"
-            android:layout_width="78dp"
-            android:layout_height="30dp" />
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/one_dingdan"
-        android:text="订单号"
-        android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/one_film"
-        android:text="影院"
-        android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/one_yingting"
-        android:text="影厅"
-        android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/one_time"
-        android:text="时间"
-        android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/one_count"
-        android:text="数量"
-        android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/one_money"
-        android:text="金额"
-        android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+
+        app:cardElevation="4dp"
+        app:cardCornerRadius="5dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/one_title"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true"
+                    android:textColor="#333333"
+                    android:text="铁血战士"
+                    android:layout_marginBottom="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/one_button"
+                    android:textSize="14sp"
+                    android:textColor="#ffffff"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/finish_shape"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="去付款"
+                    android:layout_width="78dp"
+                    android:layout_height="30dp" />
+            </RelativeLayout>
+            <TextView
+                android:id="@+id/one_dingdan"
+                android:text="订单号"
+                android:layout_marginBottom="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/one_film"
+                android:text="影院"
+                android:layout_marginBottom="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/one_yingting"
+                android:text="影厅"
+                android:layout_marginBottom="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/one_time"
+                android:text="时间"
+                android:layout_marginBottom="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/one_count"
+                android:text="数量"
+                android:layout_marginBottom="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/one_money"
+                android:text="金额"
+                android:layout_marginBottom="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 </LinearLayout>
