--- a/app/src/main/res/layout/activity_appropriate.xml
+++ b/app/src/main/res/layout/activity_appropriate.xml
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:layout_height="wrap_content">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recy"
