--- a/app/src/main/res/layout/appropriate_adapter.xml
+++ b/app/src/main/res/layout/appropriate_adapter.xml
@@ -3,9 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="5dp"
+        >
     <RelativeLayout
         android:layout_centerHorizontal="true"
-        android:layout_width="312dp"
+        android:layout_width="wrap_content"
         android:layout_height="90dp">
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/sim"
@@ -44,4 +51,5 @@
             android:layout_height="wrap_content" />
 
     </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
