--- a/app/src/main/res/drawable/touming.xml
+++ b/app/src/main/res/drawable/touming.xml
@@ -8,7 +8,7 @@
         android:top="7dp"
         android:right="7dp"
         android:bottom="7dp" />
-    <corners android:radius="8dp" />
+    <!--<corners android:radius="8dp" />-->
 
 
 </shape>
