--- a/app/src/main/res/layout/activity_cinema_details.xml
+++ b/app/src/main/res/layout/activity_cinema_details.xml
@@ -106,7 +106,12 @@
             android:layout_marginTop="30dp"
             android:layout_marginRight="24dp"></android.support.v7.widget.RecyclerView>
     </LinearLayout>
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/touming"
+        >
     <ImageView
         android:id="@+id/img_return"
         android:layout_alignParentBottom="true"
@@ -116,5 +121,5 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/com_icon_my_default_" />
-
+    </RelativeLayout>
 </RelativeLayout>
