--- a/app/src/main/res/layout/activity_my__tracker_.xml
+++ b/app/src/main/res/layout/activity_my__tracker_.xml
@@ -53,13 +53,20 @@
 
 
     </LinearLayout>
-    <ImageView
-        android:id="@+id/img_back"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/com_icon_my_default_"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="24dp"
-        android:layout_marginBottom="20dp"
-        />
+        android:background="@drawable/touming"
+        >
+        <ImageView
+            android:id="@+id/img_back"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/com_icon_my_default_"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="24dp"
+            android:layout_marginBottom="20dp"
+            />
+    </RelativeLayout>
 </RelativeLayout>
