--- a/app/src/main/res/layout/film_item_pratticulars_filmreview.xml
+++ b/app/src/main/res/layout/film_item_pratticulars_filmreview.xml
@@ -45,6 +45,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:background="@drawable/touming"
         android:layout_alignParentBottom="true">
 
         <ImageView
