--- a/app/src/main/res/layout/pupop_ping.xml
+++ b/app/src/main/res/layout/pupop_ping.xml
@@ -9,6 +9,7 @@
     <RelativeLayout
         android:id="@+id/rlay"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.facebook.drawee.view.SimpleDraweeView
@@ -33,7 +34,37 @@
      android:layout_marginTop="10dp"
      android:layout_width="match_parent"
      android:maxLines="3"
-     android:layout_marginLeft="20dp"
-     android:layout_margin="10dp"
+     android:layout_marginLeft="24dp"
+     android:layout_marginRight="24dp"
+
+
      android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/shijian"
+        android:textSize="12sp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/tt"
+        android:text="01-01   13:04"
+        android:layout_marginLeft="24dp"
+        android:layout_width="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/ping"
+        android:background="@drawable/comment"
+        android:layout_width="16dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/tt"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="24dp"
+        android:layout_height="16dp" />
+        <ImageView
+            android:layout_width="16sp"
+            android:layout_height="16sp"
+            android:background="@drawable/praise_f"
+            android:layout_toLeftOf="@id/ping"
+            android:layout_below="@id/tt"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="10dp"
+            />
 </RelativeLayout>
