--- a/app/src/main/res/layout/appropriate_adapter.xml
+++ b/app/src/main/res/layout/appropriate_adapter.xml
@@ -6,7 +6,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         app:cardElevation="4dp"
         app:cardCornerRadius="5dp"
         >
@@ -25,6 +25,7 @@
             android:layout_marginTop="10dp"
             android:textSize="14sp"
             android:text="哈哈哈哈"
+            android:maxLines="1"
             android:layout_toRightOf="@id/sim"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
