--- a/app/src/main/res/layout/activity_show_move.xml
+++ b/app/src/main/res/layout/activity_show_move.xml
@@ -102,6 +102,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:background="@drawable/touming"
         android:layout_alignParentBottom="true"
         >
         <ImageView
