--- a/app/src/main/res/layout/frag_cinema_layout.xml
+++ b/app/src/main/res/layout/frag_cinema_layout.xml
@@ -51,6 +51,7 @@
             android:padding="0dp"
             android:text="推荐影院"
             android:layout_marginLeft="30dp"
+            android:textColor="#ffffff"
             android:background="@drawable/btn_gradient"
             android:layout_width="83dp"
             android:layout_height="25dp" />
@@ -70,13 +71,19 @@
         android:layout_below="@id/re"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recy_tui"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recy_tui"
 
-            android:layout_marginBottom="80dp"
-            ></android.support.v7.widget.RecyclerView>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:layout_marginBottom="60dp"
+                ></android.support.v7.widget.RecyclerView>
+        </RelativeLayout>
+
     </ScrollView>
 
 </RelativeLayout>
