--- a/app/src/main/res/layout/show_movier_adapter.xml
+++ b/app/src/main/res/layout/show_movier_adapter.xml
@@ -8,6 +8,7 @@
     android:layout_marginTop="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:clipChildren="false"
         android:layout_height="140dp">
