--- a/app/src/main/res/layout/activity_cinema_choose.xml
+++ b/app/src/main/res/layout/activity_cinema_choose.xml
@@ -166,8 +166,8 @@
         android:layout_below="@id/rl_top"
         android:layout_above="@+id/rl_bot"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="80dp" />
 
 
     <RelativeLayout
