--- a/app/src/main/res/layout/activity_my__attention_.xml
+++ b/app/src/main/res/layout/activity_my__attention_.xml
@@ -12,18 +12,20 @@
         android:id="@+id/lay"
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         >
         <Button
         android:text="电影"
         android:padding="0dp"
         android:id="@+id/bt_pian"
+            android:layout_centerVertical="true"
         android:layout_marginLeft="90dp"
         android:layout_width="83dp"
         android:layout_height="25dp"
         android:background="@drawable/btn_wu"/>
         <Button
             android:text="影院"
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@id/bt_pian"
             android:padding="0dp"
             android:id="@+id/bt_cheng"
