--- a/app/src/main/res/layout/activity_my__tracker_.xml
+++ b/app/src/main/res/layout/activity_my__tracker_.xml
@@ -18,12 +18,13 @@
                 android:layout_marginTop="50dp"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/ticket_wait_money"
                     android:text="待付款"
+                    android:layout_marginTop="2dp"
                     android:background="@drawable/btn_wu"
                     android:layout_marginRight="34dp"
                     android:textSize="14sp"
@@ -35,6 +36,7 @@
                     android:text="已完成"
                     android:background="@drawable/btn_wu"
                     android:textSize="14sp"
+                    android:layout_marginTop="2dp"
                     android:textColor="#333333"
                     android:layout_width="83dp"
                     android:layout_height="25dp" />
