--- a/app/src/main/res/layout/item_cinema_time.xml
+++ b/app/src/main/res/layout/item_cinema_time.xml
@@ -2,14 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
     >
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="90dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/my_message_shape"
         android:paddingLeft="10dp">
