添加友盟统计

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -121,6 +121,7 @@
         <Button
             android:id="@+id/goupiao"
             android:layout_width="50dp"
+            android:textColor="#ffffff"
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
