--- a/app/src/main/res/layout/show_movier_adapter.xml
+++ b/app/src/main/res/layout/show_movier_adapter.xml
@@ -73,6 +73,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginTop="25dp"
             android:layout_marginRight="10dp"
+            android:padding="5dp"
             android:layout_width="24dp"
             android:layout_height="24dp" />
     </RelativeLayout>
