--- a/app/src/main/res/layout/activity_region.xml
+++ b/app/src/main/res/layout/activity_region.xml
@@ -132,6 +132,7 @@
                 android:layout_marginLeft="20dp"
                 android:hint="手机号"
                 android:textSize="18dp"
+                android:maxLength="11"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
                 android:layout_centerVertical="true"
@@ -194,6 +195,7 @@
                 android:layout_height="30dp"
                 android:layout_toRightOf="@+id/ppp5"
                 android:layout_marginLeft="20dp"
+                android:minLines="8"
                 android:hint="登陆密码"
                 android:textSize="18sp"
                 android:textColor="@android:color/white"
