--- a/app/src/main/res/layout/activity_system_massage_item.xml
+++ b/app/src/main/res/layout/activity_system_massage_item.xml
@@ -11,6 +11,37 @@
         android:textColor="#333333"
         android:textSize="16sp"
         android:text="系统消息"/>
+    <LinearLayout
+        android:id="@+id/line1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/massage_time"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:id="@+id/boby_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#333333"
+            android:textSize="12sp"
+            android:layout_weight="9"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_below="@+id/sys_text"
+            android:text="bwejbvjbdejvbjerbjvbjbjvbaejbgjarebjgbref"/>
+
+        <TextView
+            android:id="@+id/circle"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:textSize="12sp"
+            android:background="@drawable/system_s"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="6dp"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:text="1"/>
+    </LinearLayout>
     <TextView
         android:id="@+id/massage_time"
         android:layout_width="wrap_content"
@@ -20,33 +51,13 @@
         android:textColor="#333333"
         android:textSize="12sp"
         android:text="18:00:00"/>
-    <TextView
-        android:id="@+id/circle"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_alignParentRight="true"
-        android:textSize="12sp"
-        android:background="@drawable/cancel"
-        android:layout_below="@+id/massage_time"
-        android:layout_marginTop="6dp"
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:text="1"/>
 
-    <TextView
-        android:id="@+id/boby_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#333333"
-        android:textSize="12sp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@+id/sys_text"
-        android:text="bwejbvjbdejvbjerbjvbjbjvbaejbgjarebjgbref"/>
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2px"
-        android:layout_below="@+id/boby_text"
+        android:layout_below="@+id/line1"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="20dp"
         android:background="#dedcdc"/>
